src/test/ui/issues/issue-22638.stderr
error: reached the recursion limit while instantiating `A::matches::$CLOSURE`
  --> $DIR/issue-22638.rs:41:9
   |
LL | /         base.matches(&|| {
LL | |
LL | |             C(base.clone()).matches(f)
LL | |         })
   | |__________^
...
LL |           a.matches(f)
   |           ------------ in the inlined copy of this code
   |
note: `A::matches` defined here
  --> $DIR/issue-22638.rs:14:5
   |
LL |     pub fn matches<F: Fn()>(&self, f: &F) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the full type name has been written to '$TEST_BUILD_DIR/issues/issue-22638/issue-22638.long-type.txt'

error: aborting due to previous error

